# pyspellchecker

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  codecov.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  python-package.yml  ruff-check.yml  ruff.yaml
docs/: Makefile  make.bat
docs/source/: code.rst  conf.py  index.rst  quickstart.rst
requirements/: requirements-dev.txt
scripts/: build_dictionary.py  filtered_opentaal_wordlist.py  include_and_exclude.py  ru.json
scripts/cleaner/: __init__.py  pipelines.py
scripts/data/: de_include.txt  en_exclude.txt  en_include.txt  es_exclude.txt  es_include.txt  eu_full.json  fa_include.txt  fr_include.txt  it_include.txt  lv_exclude.txt  nl_exclude.txt  nl_include.txt  ru_exclude.txt
scripts/data/levidromelist-dicts/: american-english-large.txt  italian.txt  spanish.txt
scripts/preprocessing/: .gitignore
scripts/preprocessing/russian/: README.md  install_dependencies.sh  preprocess.py
spellchecker/: __init__.py  info.py  spellchecker.py  utils.py
spellchecker/resources/: en.json
tests/: __init__.py  check_dictionary.py  spellchecker_test.py
tests/resources/: small_dictionary.json  small_doc.txt
