[project]
name = "pyspellchecker"
dynamic = ["version"]
authors = [{ name = "Tyler Barrus", email = "barrust@gmail.com" }]
license = "MIT"
description = "Pure python spell checker based on work by Peter Norvig"
keywords = [
    "python",
    "spelling",
    "natural language processing",
    "nlp",
    "typo",
    "checker",
]
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"


[tool.setuptools.dynamic]
version = { attr = "spellchecker.__version__" }


[project.urls]
homepage = "https://github.com/barrust/pyspellchecker"
bug-tracker = "https://github.com/barrust/pyspellchecker/issues"
documentation = "https://pyspellchecker.readthedocs.io/"

[tool.setuptools.packages.find]
include = ["spellchecker", "spellchecker.*"]

[tool.pep8]
max-line-length = 120

[tool.pycodestyle]
max-line-length = 120

[tool.flake8]
max-line-length = 120

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
max-args = 6

[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"
